# imagen

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETENESS_REPORT.md  DEPLOYMENT_GUIDE.md  FIXES_SUMMARY.md  INFRASTRUCTURE_GUIDE.md  MODEL_MANAGEMENT.md  MODEL_MANAGEMENT_SUMMARY.txt  MODEL_QUICKSTART.md  Makefile  QUICK_REFERENCE.md  README.md  check_setup.py  cloudbuild-pr.yaml  cloudbuild.yaml  download_models.py  process_user_image.py  pyproject.toml
docker/: Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml
docs/: README.md
docs/core-concepts/: SYSTEM_DESIGN.md
docs/deployment/: CICD_PIPELINE.md
docs/development/: GIT_WORKFLOW.md
docs/getting-started/: FIRST_DEPLOYMENT.md  QUICKSTART.md  SETUP_CHECKLIST.md
docs/models/: MODEL_MANAGEMENT.md
docs/observability/: OBSERVABILITY_GUIDE.md  OPENTELEMETRY_GUIDE.md
docs/reference/: CONFIGURATION_REFERENCE.md  QUICK_REFERENCE.md
docs/security/: API_SECURITY.md  SECURITY_IMPLEMENTATION.md
k8s/: kustomization.yaml
k8s/autoscaling/: README.md  background-remove-hpa.yaml  comic-hpa.yaml  custom-metrics-adapter.yaml  enhance-hpa.yaml  kustomization.yaml  style-aged-hpa.yaml  upscale-hpa.yaml
k8s/autoscaling/keda/: README.md  hybrid-scaledobjects.yaml  scaledobjects.yaml
k8s/base/: configmap.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  redis.yaml  workload-identity.yaml
k8s/monitoring/: README.md  kustomization.yaml  pod-monitoring.yaml  rules.yaml
k8s/network-policies/: allow-dns.yaml  allow-triton.yaml  default-deny.yaml  kustomization.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/triton/: deployment.yaml  kustomization.yaml  model-repository-configmap.yaml  pod-monitoring.yaml
k8s/workers/: background-remove-worker.yaml  comic-worker.yaml  enhance-worker.yaml  kustomization.yaml  style-aged-worker.yaml  upscale-worker.yaml
models/: .gitkeep
src/: __init__.py
src/api/: main.py
src/api/middleware/: __init__.py  auth.py  errors.py  logging.py  metrics.py  rate_limit.py  tracing.py  validation.py
src/api/routes/: __init__.py  health.py  images.py  jobs.py
src/api/schemas/: __init__.py  images.py  jobs.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  telemetry.py
src/pipelines/: __init__.py  background_remove.py  base.py  enhance.py  style_aged.py  style_comic.py  upscale.py
src/services/: __init__.py  jobs.py  queue.py  storage.py
src/services/triton/: __init__.py  client.py
src/utils/: __init__.py  image.py  secrets.py
src/workers/: __init__.py  background_remove.py  base.py  enhance.py  instrumentation.py  style_aged.py  style_comic.py  triton_worker.py  upscale.py
terraform/: README.md  backend.tfvars  main.tf  outputs.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars
terraform/modules/apis/: main.tf
tests/: conftest.py  manual_test_script.py  test_api.py
tests/integration/: test_gcp.py
tests/unit/: test_api.py  test_utils.py
triton/: Dockerfile  README.md
(+28 files in other folders)
